@@ -3652,6 +3652,30 @@ namespace {
         UpdateVelocityTable();
     }
 
+    /** @brief Change type of an existing dimension.
+     *
+     * Alters the dimension type of a dimension already existing on this
+     * region. If there is currently no dimension on this Region with type
+     * @a oldType, then this call with throw an Exception. Likewise there are
+     * cases where the requested dimension type cannot be performed. For example
+     * if the new dimension type shall be gig::dimension_samplechannel, and the
+     * current dimension has more than 2 zones. In such cases an Exception is
+     * thrown as well.
+     *
+     * @param oldType - identifies the existing dimension to be changed
+     * @param newType - to which dimension type it should be changed to
+     * @throws gig::Exception if requested change cannot be performed
+     */
+    void Region::SetDimensionType(dimension_t oldType, dimension_t newType) {
+        if (oldType == newType) return;
+        dimension_def_t* def = GetDimensionDefinition(oldType);
+        if (!def)
+            throw gig::Exception("No dimension with provided old dimension type exists on this region");
+        if (newType == dimension_samplechannel && def->zones != 2)
+            throw gig::Exception("Cannot change to dimension type 'sample channel', because existing dimension does not have 2 zones");
+        def->split_type = __resolveSplitType(newType);
+    }
+
     DimensionRegion* Region::GetDimensionRegionByBit(const std::map<dimension_t,int>& DimCase) {
         uint8_t bits[8] = {};
         for (std::map<dimension_t,int>::const_iterator it = DimCase.begin();
