@@ -66,6 +66,7 @@ Version CVS HEAD (?)
     - GIG FORMAT EXTENSION: added support for real-time instrument scripts.
     - added new method Region::GetDimensionRegionIndexByValue()
     - added new method Script::GetGroup()
+    - added new method Region::SetDimensionType()
 
   * src/DLS.cpp, src/DLS.h:
     - added new method File::GetFileName()
